# swagger/openapi.yaml
@@ -89,10 +89,10 @@ components:
         message:
           type: string
 tags:
-  - name: apiv1
-    description: API v1
-  - name: apiv2
-    description: API v2
+  - name: Books V1
+    description: Books V1
+  - name: Books V2
+    description: Books V2
   - name: authentication
     description: Authentication endpoints
   - name: users
@@ -101,7 +101,7 @@ paths:
   /api/v1/books:
     get:
       tags:
-        - apiv1
+        - Books V1
       summary: GET endpoint
       operationId: v1_books_get
       responses:
@@ -115,7 +115,7 @@ paths:
                   $ref: '#/components/schemas/Book'
     post:
       tags:
-        - apiv1
+        - Books V1
       summary: POST endpoint
       operationId: v1_books_create_post
       responses:
@@ -125,16 +125,24 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Book'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
       requestBody:
         required: true
         content:
           application/json:
             schema:
               $ref: '#/components/schemas/Book'
+      security:
+        - bearerAuth: []
   /api/v2/books:
     get:
       tags:
-        - apiv2
+        - Books V2
       summary: GET endpoint
       operationId: v2_books_get
       responses:
@@ -148,7 +156,7 @@ paths:
                   $ref: '#/components/schemas/Book'
     post:
       tags:
-        - apiv2
+        - Books V2
       summary: POST endpoint
       operationId: v2_books_create_post
       responses:
@@ -158,16 +166,24 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Book'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
       requestBody:
         required: true
         content:
           application/json:
             schema:
               $ref: '#/components/schemas/Book'
+      security:
+        - bearerAuth: []
   /api/v1/book/{id}:
     get:
       tags:
-        - apiv1
+        - Books V1
       summary: GET endpoint
       operationId: v1_book_get
       responses:
@@ -188,7 +204,7 @@ paths:
   /api/v2/book/{id}:
     get:
       tags:
-        - apiv2
+        - Books V2
       summary: GET endpoint
       operationId: v2_book_get
       responses:
@@ -209,7 +225,7 @@ paths:
   /api/v1/books/{id}:
     put:
       tags:
-        - apiv1
+        - Books V1
       summary: PUT endpoint
       operationId: v1_books_update_put
       responses:
@@ -243,7 +259,7 @@ paths:
         - bearerAuth: []
     delete:
       tags:
-        - apiv1
+        - Books V1
       summary: DELETE endpoint
       operationId: v1_books_delete_delete
       responses:
@@ -268,7 +284,7 @@ paths:
   /api/v2/books/{id}:
     put:
       tags:
-        - apiv2
+        - Books V2
       summary: PUT endpoint
       operationId: v2_books_update_put
       responses:
@@ -302,7 +318,7 @@ paths:
         - bearerAuth: []
     delete:
       tags:
-        - apiv2
+        - Books V2
       summary: DELETE endpoint
       operationId: v2_books_delete_delete
       responses:
@@ -329,7 +345,7 @@ paths:
       tags:
         - authentication
       summary: POST endpoint
-      operationId: signin_post
+      operationId: post_signin
       responses:
         '201':
           description: Authentification réussie
@@ -354,7 +370,7 @@ paths:
       tags:
         - authentication
       summary: POST endpoint
-      operationId: signup_post
+      operationId: post_signup
       responses:
         '201':
           description: Authentification réussie
@@ -379,22 +395,28 @@ paths:
       tags:
         - users
       summary: GET endpoint
-      operationId: users_get
+      operationId: get_users
       responses:
         '200':
-          description: Liste des ressources
+          description: Ressource trouvée
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/User'
+        '404':
+          description: Not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      parameters:
+        - $ref: '#/components/parameters/IdParam'
   /api/user/{id}:
     get:
       tags:
         - users
       summary: GET endpoint
-      operationId: user_get
+      operationId: getuser
       responses:
         '200':
           description: Ressource trouvée
